[gd_scene load_steps=13 format=2]

[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_142458-removebg-preview_resized.png" type="Texture" id=1]
[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_140340-removebg-preview_resized (2).png" type="Texture" id=2]
[ext_resource path="res://imagens/menu/back_jogo_arrumada.png" type="Texture" id=3]
[ext_resource path="res://imagens/menu/image-removebg-preview_resized.png" type="Texture" id=4]
[ext_resource path="res://fontes/OldSchoolAdventures-42j9.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/menu/TextureRect.gd" type="Script" id=6]
[ext_resource path="res://musica/10 MINUTOS DE BOSSA NOVA, SAMBA, JAZZ BRASILEIRO (BRAZIL) RELAX (320 kbps) (mp3cut.net).wav" type="AudioStream" id=7]
[ext_resource path="res://imagens/menu/Button_mute-removebg-preview (4).png" type="Texture" id=8]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item; 
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/scroll_speed = null

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.537753, 0.558408 )
texture = ExtResource( 3 )
stretch_mode = 2
script = ExtResource( 6 )

[node name="Volume" type="TextureButton" parent="TextureRect"]
margin_left = 1735.0
margin_top = 915.101
margin_right = 1803.0
margin_bottom = 979.101
rect_scale = Vector2( 1.87784, 1.99999 )
texture_normal = ExtResource( 8 )

[node name="musica_fundo" type="AudioStreamPlayer" parent="TextureRect"]
stream = ExtResource( 7 )
volume_db = -27.092
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 372.0
margin_top = 314.0
margin_right = 789.0
margin_bottom = 635.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 417.0
margin_bottom = 108.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/TextureButton"]
margin_left = 97.0
margin_top = 32.0
margin_right = 177.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Label3" type="Label" parent="."]
margin_left = 469.0
margin_top = 136.0
margin_right = 653.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 2 )
text = "V.tal

"

[node name="Label4" type="Label" parent="Label3"]
margin_left = -97.0
margin_right = -7.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 2 )
text = "Mr

"

[connection signal="pressed" from="TextureRect/Volume" to="TextureRect" method="_on_Volume_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="TextureRect" method="_on_TextureButton_pressed"]
